--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="game-instructions">
         <p>Welcome to Break the Blockade!</p>
         <p>The Red King is under siege by the Blue Army. 
-            The Red Battalions must reach their King to provide the kingdom with provisions to outlast the seige.</p>
+            The Red Battalions must reach their King to provide the kingdom with provisions to outlast the siege.</p>
         <p>Red wins if:
             <ul>
                 <li>One of the red pieces reaches the King piece (piece with the double black border) within 10 turns.</li>
@@ -41,7 +41,7 @@
         </p>
         <p>Movement rules:
             <ul>
-                <li>Pawns can't move into or through spaces occupied by other pieces, except for Red pieces that can move onto the King piece to win the game.</li>
+                <li>Pieces can't move into or through spaces occupied by other pieces, except for Red pieces that can move onto the King piece to win the game.</li>
                 <li>Red:
                     <ul>
                         <li>Red moves first.</li>
