More spelling fixes and rule clarification.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </p>
         <p>Blue wins if:
             <ul>
-                <li>No red piece reache the King piece withing ten turns, or</li>
+                <li>No red piece reaches the King piece within ten turns, or</li>
                 <li>All red pieces have been captured or immobilized</li>
             </ul>
         </p>
@@ -59,7 +59,7 @@
         </p>
         <p>Immobility: If a single red piece is adjacent to a single blue piece which is not adjacent to another other red piece, the red piece cannot move.</p>
         <p>Release: If a single blue piece is adjacent to 2+ red pieces, all the red pieces can move.</p>
-        <p>Capture: If 2 blue pieces are both adjacent to a single red piece, the red piece is captured and removed from the board.</p>
+        <p>Capture: If 2 blue pieces are both adjacent to a single red piece, the red piece is captured and removed from the board. However, the Red King cannot be captured.</p>
         <p>How to use this web-based simulator:
             <ul>
                 <li>Click a piece to select it</li>
